Add favicon and meta description

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -3,12 +3,13 @@ import '../styles/NavBar.css';
 ---
 <nav class="navbar">
   <div class="nav-container">
-    <img class="nav-logo" src="../../public/logo.png"/>
+    <div class="nav-logo">
+      <img src="/logo.png" alt="Truck Styles Pro Logo" />
+    </div>
     <div class="nav-links">
-      <a href="#produits">Nos Produits</a>
-      <a href="#avantages">Avantages</a>
-      <a href="#Seasonnal">En cette Saison</a>
-      <a href="#contact" class="cta-button">Commander</a>
+      <a href="#services">Services</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
     </div>
   </div>
 </nav> 
