--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,11 +5,9 @@ import '../styles/Hero.css';
 
 <section id="hero">
   <div class="hero-content">
-    <h1>Les fruits de Bésignan</h1>
-    <h2>Découvrez nos fruits ensoleillés et les plantes aromatiques issus de nos vergers nichés en plein coeur du Parc Naturel des Baronnies Provençales</h2>
+    <h1>Chaque camion commence par vos idées</h1>
     <div class="hero-buttons">
-      <a href="#produits" class="primary-button">Découvrir nos produits</a>
-      <a href="#contact" class="secondary-button">Commander maintenant</a>
+      <a href="#contact" class="secondary-button">Contactez-nous</a>
     </div>
   </div>
 </section> 
