--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import '../styles/Hero.css';
 
 <section id="hero">
   <div class="hero-content">
-    <h1>Chaque camion commence par vos idées</h1>
+    <h1>Chaque camion commence par vos idées les plus chères</h1>
     <div class="hero-buttons">
       <a href="#contact" class="secondary-button">Contactez-nous</a>
     </div>
