--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,8 +7,8 @@ import '../styles/NavBar.css';
       <img src="/logo.png" alt="Truck Styles Pro Logo" />
     </div>
     <div class="nav-links">
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#trucks">Nos camions</a>
+      <a href="#our_story">Notre histoire</a>
       <a href="#contact">Contact</a>
     </div>
   </div>
