--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,14 +1,19 @@
 ---
-import background from '../assets/background.svg';
 import Contact from './Contact.astro';
 import Footer from './Footer.astro';
 import NavBar from './NavBar.astro';
 import Hero from './Hero.astro';
+import Story from './Story.astro';
+import Benefits from './Benefits.astro';
+import Testimonials from './Testimonials.astro';
 ---
 <div id="container">
 	<NavBar />
 	<main>
 		<Hero />
+		<Testimonials />
+		<Benefits />
+		<Story />
 		<Contact />
 	</main>
 	<Footer />
